--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^4.0.4",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
@@ -28,7 +29,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "eslintConfig": {
     "root": true,
