--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aacassandra/vue3-progressbar": "^1.0.3",
     "@tinymce/tinymce-vue": "^4.0.4",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
