--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tinymce/tinymce-vue": "^4.0.4",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "mitt": "^3.0.0",
     "register-service-worker": "^1.7.1",
     "sweetalert2": "^11.1.7",
     "vue": "^3.0.0",
